# SpaceGLWorkspace

./: .gitignore  CMakeLists.txt  SpaceGLWorkspace.code-workspace
EngineGL/: CMakeLists.txt
EngineGL/include/EngineCore/: compute_shader_program.hpp  engine_export.h  key_codes.h  shader_program.h  shader_program.hpp  vf_shader_program.hpp  window.h  window.hpp
EngineGL/src/: compute_shader_program.cpp  shader_program.cpp  vf_shader_program.cpp  window.cpp
SpaceGL/: CMakeLists.txt  README.md
SpaceGL/include/: body.hpp  buffers_handler.hpp  camera.hpp  renderer.hpp  resource_handler.hpp  simulator.hpp
SpaceGL/shaders/: ringFrag.fs  ringVert.vs  skybox.vs  sphereFrag.fs  sphereVert.vs
SpaceGL/src/: buffers_handler.cpp  camera.cpp  renderer.cpp  resource_handler.cpp  simulator.cpp  winmain.cpp
